exports[`<LimitsOverQuota /> should render limits 1`] = `
<AlertBlock
  title="Project is over quota"
  type="danger">
  <ul
    className="list-unstyled list-no-padding">
    <li
      key="0">
      <Link
        activeClassName="active"
        className=""
        to="settings-limits">
        <strong>
          Section 1
           - 
          My Limit 1
        </strong>
         
        (12.88 GB of 107.37 GB)
      </Link>
    </li>
    <li
      key="1">
      <Link
        activeClassName="active"
        className=""
        to="settings-limits">
        <strong>
          Section 2
           - 
          My Limit 2
        </strong>
         
        (1,100 of 15,000)
      </Link>
    </li>
  </ul>
</AlertBlock>
`;

exports[`<LimitsOverQuota /> should render nothing for no limits 1`] = `""`;

exports[`<LimitsOverQuota /> should render one limit 1`] = `
<AlertBlock
  title="Project is over quota"
  type="danger">
  <ul
    className="list-unstyled list-no-padding">
    <li
      key="0">
      <Link
        activeClassName="active"
        className=""
        to="settings-limits">
        <strong>
          Section 1
           - 
          My Limit 1
        </strong>
         
        (12.88 GB of 107.37 GB)
      </Link>
    </li>
  </ul>
</AlertBlock>
`;
